tests/spec/emit/snapshots/indexed_receiver_append_spread_arg_mutates_index.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn bump_and_make(i: mut Ref<int>) -> Slice<int> {
    i.* = 1
    [99]
  }
  
  fn test() -> int {
    let xss = [[10], [20]]
    let mut i = 0
    let ys = xss[i].append(bump_and_make(&i)...)
    ys[0]
  }
---
package main

func bumpAndMake(i *int) []int {
	*i = 1
	return []int{99}
}

func test() int {
	xss := [][]int{{10}, {20}}
	i := 0
	recv := xss[i]
	ys := append(recv[:len(recv):len(recv)], bumpAndMake(&i)...)
	return ys[0]
}
