tests/spec/emit/snapshots/indexed_receiver_extend_arg_mutates_index.snap
---
source: tests/spec/emit/expressions.rs
description: "input: \nfn bump_and_make(i: Ref<int>) -> Slice<int> {\n  i.* = 1\n  [99]\n}\n\nfn test() -> int {\n  let xss = [[10], [20]]\n  let mut i = 0\n  let ys = xss[i].extend(bump_and_make(&i))\n  ys[0]\n}\n"
---
package main

func bump_and_make(i *int) []int {
	*i = 1
	return []int{99}
}

func test() int {
	xss := [][]int{[]int{10}, []int{20}}
	i := 0
	recv_1 := xss[i]
	ys := append(recv_1, bump_and_make(&i)...)
	return ys[0]
}
