tests/spec/emit/snapshots/init_function_escaped.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn init() -> int {
    42
  }
  
  fn test() -> int {
    init()
  }
---
package main

func init_() int {
	return 42
}

func test() int {
	return init_()
}
