tests/spec/emit/snapshots/inline_call_pins_when_later_operand_pins.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn run() -> int {
    let mut x = 1
    let setx = || -> int { x = 50; 100 }
    let bump = |v: int| -> int { x += 7; v }
    let r = [setx(), x, bump(5)]
    r[0] + r[1] + r[2]
  }
---
package main

func run() int {
	x := 1
	setx := func() int {
		x = 50
		return 100
	}
	bump := func(v int) int {
		x += 7
		return v
	}
	v_1 := setx()
	v_2 := x
	r := []int{v_1, v_2, bump(5)}
	return r[0] + r[1] + r[2]
}
