tests/spec/emit/snapshots/integer_literal.snap
---
source: tests/spec/emit/literals.rs
description: |
  
  fn test() -> int {
    42
  }
---
package main

func test() int {
	return 42
}
