tests/spec/emit/snapshots/interface_bound_method_call.snap
---
source: tests/spec/emit/types.rs
description: |
  
  import "go:fmt"
  
  interface Stringer {
    fn string_value() -> string
  }
  
  fn print_it<T: Stringer>(x: T) {
    let s = x.string_value();
    fmt.Print(f"{s}\n");
  }
---
package main

import "fmt"

type Stringer interface {
	stringValue() string
}

func printIt[T Stringer](x T) {
	s := x.stringValue()
	fmt.Print(s + "\n")
}
