tests/spec/emit/snapshots/interface_map_key_comparable_constraint.snap
---
source: tests/spec/emit/types.rs
description: |
  
  interface Store<K, V> {
    fn entries(self) -> Map<K, V>
  }
---
package main

type Store[K comparable, V any] interface {
	entries() map[K]V
}
