tests/spec/emit/snapshots/interface_methods_emit_without_receiver.snap
---
source: tests/spec/emit/types.rs
description: |
  
  interface Greetable {
    fn greet() -> string;
    fn name() -> string;
    fn reset();
  }
---
package main

type Greetable interface {
	greet() string
	name() string
	reset()
}
